[package]
name = "trading-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
